# gravity-sim

./: .env  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  gravity-sim
.github/workflows/: make.yml
docs/: project_ideas.md  todo.md
docs/debugging-plans/: interactivity-01-session-01.md
docs/tasks/: interactivity-01.md  testing-01.md
include/: adapter.h  arena_allocator.h  command.h  gravity.h  gravity_interactor.h  iterator.h  logging.h  observer.h  raygui.h  simulation.h  ui.h  ui_handler.h  user_interface.h  vector.h  verlet.h
include/app/: user_input.h  user_interface.h
include/math/: vector.h
include/simulation/: gravity.h
legacy/include/: command.h  optional.h
legacy/src/: gravity.c  logging.c  main.c  ui.c
legacy/tests/: test_gravity.c  test_gravity_interactor.c  test_optionals.c
src/: arena_allocator.c  gravity.c  gravity_interactor.c  iterator.c  logging.c  main.c  simulation.c  ui.c  ui_handler.c  user_interface.c  vector.c  verlet.c
src/app/: user_input.c  user_interface.c
src/math/: vector.c
src/simulation/: gravity.c
tests/: test_gravity.c  test_gravity_interactor.c  test_ui_handler.c
